Separate data fetching and processing
Signed-off-by: Liang Zhang <psychelzh@outlook.com>

--- a/movie_related/config.yml
+++ b/movie_related/config.yml
@@ -18,3 +18,8 @@ default:
       - 电影回忆任务
       - 推理测验
       - 时间记忆任务
+      - 昨夜睡眠质量
+      - 近一个月睡眠质量
+      - 睡眠类型
+      - 睡眠信念和态度
+      - 困倦程度
